--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootbootstrap-backwardstrap": "JumpLinkNetwork/bootstrap-backward#v4-0-0-alpha-4-scss-backward",
+    "bootstrap-backward": "JumpLinkNetwork/bootstrap-backward#v4-0-0-alpha-4-scss-backward",
     "tether": "^1.3.7",
     "simpler-sidebar": "^2.1.4"
   }
